// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store hooks correctly handles \`onAction()\` hook 1`] = `
Array [
  "setTitle",
  "bar",
  Object {
    "app": Object {
      "title": "minska",
    },
    "error": null,
    "title": "default title",
  },
]
`;

exports[`store hooks correctly handles \`onChange()\` hook 1`] = `
Array [
  Object {
    "app": Object {
      "title": "minska",
    },
    "error": null,
    "title": "bar",
  },
  Object {
    "app": Object {
      "title": "minska",
    },
    "error": null,
    "title": "default title",
  },
]
`;

exports[`store hooks correctly handles \`onChange()\` hook 2`] = `
Array [
  Object {
    "app": Object {
      "title": "minska",
    },
    "error": null,
    "title": "default title",
  },
  Object {
    "app": Object {
      "title": "minska",
    },
    "error": null,
    "title": "bar",
  },
]
`;

exports[`store hooks correctly handles \`onError()\` hook 1`] = `
Array [
  [Error: minska: Can't find reducer or effect with name: causesError.],
  Object {
    "app": Object {
      "title": "minska",
    },
    "error": null,
    "title": "default title",
  },
]
`;

exports[`store send() correctly updates state using a reducer 1`] = `
Object {
  "app": Object {
    "title": "minska is awesome",
  },
  "error": null,
  "title": "default title",
}
`;

exports[`store send() correctly updates state using a reducer 2`] = `
Object {
  "app": Object {
    "title": "minska is awesome",
  },
  "bar": Object {
    "title": "baz",
  },
  "error": null,
  "title": "default title",
}
`;

exports[`store send() correctly updates state using a reducer 3`] = `
Object {
  "app": Object {
    "title": "minska is awesome",
  },
  "bar": Object {
    "title": "baz",
  },
  "error": null,
  "title": "omg",
}
`;

exports[`store state sets the correct state 1`] = `
Object {
  "bar": "baz",
}
`;

exports[`store subscriptions allows subscriptions 1`] = `
Array [
  Object {
    "event": "onError",
    "fn": [Function],
    "id": 0,
  },
  Object {
    "event": "onAction",
    "fn": [Function],
    "id": 1,
  },
  Object {
    "event": "onChange",
    "fn": [Function],
    "id": 2,
  },
]
`;

exports[`store subscriptions allows unsubscriptions 1`] = `
Array [
  Object {
    "event": "onError",
    "fn": [Function],
    "id": "id",
  },
]
`;

exports[`store subscriptions allows unsubscriptions 2`] = `Array []`;

exports[`store subscriptions notifies subscriptions 1`] = `
Array [
  Array [
    Object {
      "app": Object {
        "title": "minska",
      },
      "error": null,
      "title": "dude",
    },
    Object {
      "app": Object {
        "title": "minska",
      },
      "error": null,
      "title": "default title",
    },
  ],
]
`;

exports[`store subscriptions throws if subscription event name is invalid 1`] = `"minska: invalidEventName is not a valid event you can subscribe to."`;

exports[`store subscriptions throws if subscription event name is invalid 2`] = `
Object {
  "app": Object {
    "title": "minska",
  },
  "error": null,
  "title": "whooh",
}
`;

exports[`store subscriptions throws if subscription event name is invalid 3`] = `
Object {
  "app": Object {
    "title": "minska",
  },
  "error": "error text",
  "title": "default title",
}
`;

exports[`store subscriptions throws if subscription event name is invalid 4`] = `
Object {
  "app": Object {
    "title": "oooh minska",
  },
  "error": null,
  "title": "whooh",
}
`;

exports[`store subscriptions throws if unsubscribing with a non-existent sub id 1`] = `"minska: Can't find subscriber with id \\"not-found\\"."`;
